# AiTradeIntelligence

./: .replit  pyproject.toml  replit.nix
app/: main.py
app/agents/: market_trend_agents.py  recommendation_agent.py  resistance_agent.py  sentiment_agents.py  supervisor_agent.py  trading_agents.py
app/data/: market_data.py
app/db/: database.py
app/learning/: trading_lessons.py
app/strategies/: bollinger_strategy.py  fibonacci_strategy.py  fractal_strategy.py  macd_strategy.py  resistance_strategy.py  strategy_base.py
mysql_data/: aria_log.00000001  aria_log_control
mysql_data/mysql/: column_stats.MAI  column_stats.frm  columns_priv.MAI  columns_priv.frm  db.MAI  db.frm  event.MAI  event.frm  func.MAI  func.frm  general_log.frm  global_priv.MAD  global_priv.MAI  global_priv.frm  gtid_slave_pos.frm  gtid_slave_pos.ibd  help_category.MAI  help_category.frm  help_keyword.MAI  help_keyword.frm  help_relation.MAI  help_relation.frm  help_topic.MAI  help_topic.frm  index_stats.MAI  index_stats.frm  innodb_index_stats.frm  innodb_index_stats.ibd  innodb_table_stats.frm  innodb_table_stats.ibd  plugin.MAI  plugin.frm  proc.MAD  proc.MAI  proc.frm  procs_priv.MAI  procs_priv.frm  proxies_priv.MAD  proxies_priv.MAI  proxies_priv.frm  (+21 more)
mysql_data/sys/: host_summary.frm  host_summary_by_file_io.frm  host_summary_by_file_io_type.frm  host_summary_by_stages.frm  host_summary_by_statement_latency.frm  host_summary_by_statement_type.frm  innodb_buffer_stats_by_schema.frm  innodb_buffer_stats_by_table.frm  innodb_lock_waits.frm  io_by_thread_by_latency.frm  latest_file_io.frm  (+92 more)
