[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.7.0",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "quandl>=3.7.0",
    "streamlit>=1.41.1",
    "tavily-python>=0.5.0",
    "yfinance>=0.2.51",
]
